--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "krasotun",
   "license": "ISC",
   "dependencies": {
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "yaml": "^2.3.1"
   }
 }
