--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "dependencies": {
     "commander": "^11.0.0",
     "yaml": "^2.3.1"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.6.0",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.2",
+    "jest": "^29.6.0",
+    "jest-cli": "^29.6.0"
   }
 }
