--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^11.0.0",
+    "lodash": "^4.17.21",
     "yaml": "^2.3.1"
   },
   "devDependencies": {
